--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
-; [db_config]
-; driver = {ODBC Driver 17 for SQL Server}
-; server = 10.0.0.63
-; database = TESTAO
-; username = cognjen
-; password = C20ogi19
-
 [db_config]
 driver = {ODBC Driver 17 for SQL Server}
 server = 10.0.0.63
-database = ALFOM
-username = WMS
-password = Smw2019*!
+database = TESTAO
+username = cognjen
+password = C20ogi19
+
+; [db_config]
+; driver = {ODBC Driver 17 for SQL Server}
+; server = 10.0.0.63
+; database = ALFOM
+; username = WMS
+; password = Smw2019*!
