--- a/config.ini
+++ b/config.ini
@@ -11,3 +11,10 @@ server = 10.0.0.63
 database = ALFOM
 username = WMS
 password = Smw2019*!
+
+; [db_config]
+; driver = {ODBC Driver 17 for SQL Server}
+; server = 10.0.0.63
+; database = ALFOM
+; username = sa
+; password = sqlserver
